# valence-coprocessor-domain-prover

./: Cargo.nix  Cargo.toml  README.md  flake.nix
crates/builder/: Cargo.toml  build.rs
crates/builder/src/: main.rs
crates/circuit/: Cargo.toml
crates/circuit/src/: lib.rs  main.rs
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  state.rs  types.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs  main.rs
crates/wrapper/: Cargo.toml
crates/wrapper/src/: main.rs
elf/: circuit-bytes32  controller.wasm  domains.json  id.txt  wrapper-bytes32
