[workspace]
members = ["crates/circuit", "crates/core", "crates/controller"]
resolver = "2"

[workspace.package]
authors = ["Timewave Labs"]
edition = "2021"
license = "Apache-2.0"
version = "0.3.0"

[workspace.dependencies]
anyhow = { version = "1.0.83", default-features = false }
hex = "0.4.3"
msgpacker = "0.4.8"
serde_json = { version = "1.0.140", default-features = false, features = [
  "alloc",
] }
valence-coprocessor = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.1", default-features = false }
valence-coprocessor-client = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.1" }
valence-coprocessor-wasm = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.1", default-features = false }
