[package]
name = "valence-coprocessor-domain-prover-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor domain definition."

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
valence-coprocessor-client.workspace = true

[build-dependencies]
hex.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde_cbor.workspace = true
serde_json.workspace = true
sp1-build.workspace = true
sp1-sdk.workspace = true
valence-coprocessor.workspace = true
valence-coprocessor-domain-prover.path = "../core"
zerocopy.workspace = true
