[package]
name = "valence-coprocessor-domain-prover-circuit"
edition = "2021"
version = "0.1.0"

[dependencies]
msgpacker.workspace = true
sp1-zkvm.workspace = true
valence-coprocessor.workspace = true
valence-coprocessor-domain-prover.path = "../core"
valence-coprocessor-sp1.workspace = true
zerocopy.workspace = true
