[package]
name = "valence-coprocessor-domain-prover-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor controller definition."

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
valence-coprocessor.workspace = true
valence-coprocessor-wasm.workspace = true
