[package]
name = "valence-coprocessor-domain-prover-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor circuit definition."

[dependencies]
serde_json.workspace = true
valence-coprocessor-wasm.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
wasm = ["valence-coprocessor-wasm/abi-handlers"]
