[package]
name = "valence-coprocessor-domain-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor circuit definition."

[dependencies]
anyhow.workspace = true
const-hex.workspace = true
msgpacker.workspace = true
serde.workspace = true
serde_json.workspace = true
sp1-verifier.workspace = true
valence-coprocessor.workspace = true

[dev-dependencies]
valence-coprocessor-sp1.workspace = true
