[package]
name = "valence-coprocessor-domain-prover-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor circuit definition."

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
msgpacker.workspace = true
poem.workspace = true
poem-openapi.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
sp1-sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
valence-coprocessor.workspace = true
valence-coprocessor-client.workspace = true
valence-coprocessor-prover.workspace = true

valence-coprocessor-domain-prover.path = "../core"
